# UBB

./: README.md
Year 1/Semester 1/ASC/lab 02/: adunari,scaderi ex 10 byte.asm  adunari,scaderi ex 21 byte.asm  adunari,scaderi ex 21 word.asm  inmultiri, impartiri ex 10 4byte 4word.asm  inmultiri, impartiri ex 21 4byte 4words.asm  inmultiri,impartiri ex 10 3byte 1word.asm
Year 1/Semester 1/ASC/lab 03/: adunari, scaderi cu semn problema 21.asm  adunari, scaderi fara semn problema 21.asm  inmultiri, impartiri cu semn problema 21.asm  inmultiri, impartiri fara semn problema 21.asm
Year 1/Semester 1/ASC/lab 04/: ex10.asm  ex21.asm  ex31.asm
Year 1/Semester 1/ASC/lab 06/: ex21_sens_direct.asm  ex21_sens_invers.asm
Year 1/Semester 1/ASC/lab 11/: conversie.asm  inverseaza.asm  main.asm
Year 1/Semester 1/ASC/lab 12/: conversie.asm  inverseaza.asm  main.c
Year 1/Semester 1/ASC/lab02/: adunari,scaderi ex 10 byte.asm  adunari,scaderi ex 10 word.asm  adunari,scaderi ex 21 byte.asm  adunari,scaderi ex 21 word.asm  inmultiri, impartiri ex 10 4byte 4word.asm  inmultiri, impartiri ex 21 3byte 1word.asm  inmultiri, impartiri ex 21 4byte 4words.asm  inmultiri,impartiri ex 10 3byte 1word.asm
Year 1/Semester 1/FP/lab 2/: ex02 how many days.py  ex05 twin primes.py  ex11 nr with property.py  ex12 factor sequence.py  ex15 prime number.py  ex16 perfect number.py
Year 1/Semester 1/FP/lab 3/: console app seminar02.py
Year 1/Semester 1/LC/Calculator App/: main.py
Year 1/Semester 1/LC/Test Calculator App/: run tests.py
Year 1/Semester 2/Data Structures and Algorithms/lab01/: enunt.txt  interfata cu relatie.txt
Year 1/Semester 2/Data Structures and Algorithms/lab03/: enunt.txt
Year 1/Semester 2/Data Structures and Algorithms/lab04/: enunt
Year 1/Semester 2/Data Structures and Algorithms/lab06/: enunt.txt
Year 1/Semester 2/Data Structures and Algorithms/lab07/: enunt.txt
Year 1/Semester 2/GA/lab02/: enunt
Year 1/Semester 2/OOP/exams/EXAMEN_STANCU/: CMakeLists.txt  closeW.cpp  closeW.h  domain.cpp  domain.h  inProgressW.cpp  inProgressW.h  main.cpp  observer.cpp  observer.h  openW.cpp  openW.h  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h
Year 1/Semester 2/OOP/exams/STANCU_DIANA_SIMULARE/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h
Year 1/Semester 2/OOP/exams/seminar_5_216/: CMakeLists.txt  conutry_ui.cpp  conutry_ui.h  country.cpp  country.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h
Year 1/Semester 2/OOP/exams/simulari/PracticeOOP/: CMakeLists.txt  GuiFilter.cpp  GuiFilter.h  domain.cpp  domain.h  exception.cpp  exception.h  gui.cpp  gui.h  main.cpp  repofile.cpp  repofile.h  repository.cpp  repository.h  service.cpp  service.h  test_domain.cpp  test_domain.h  test_repo.cpp  test_repo.h  test_repofile.cpp  test_repofile.h  test_service.cpp  test_service.h  test_validator.cpp  test_validator.h  undo.cpp  undo.h  validator.cpp  validator.h
Year 1/Semester 2/OOP/exams/simulari/simulare_212/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  validator.cpp  validator.h
Year 1/Semester 2/OOP/exams/simulari/simulare_217/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h
Year 1/Semester 2/OOP/labs/lab10/: CMakeLists.txt  Observer.cpp  Observer.h  cosActivitati.cpp  cosActivitati.h  cosCRUDGUI.cpp  cosCRUDGUI.h  cosReadOnlyGUI.cpp  cosReadOnlyGUI.h  domain.cpp  domain.h  exceptions.cpp  exceptions.h  generalTableModel.cpp  generalTableModel.h  gui.cpp  gui.h  main.cpp  mainListModel.cpp  mainListModel.h  repository.cpp  service.cpp  service.h  tests.h  undo.cpp  validator.cpp  validator.h
Year 1/Semester 2/OOP/test/: main.c
Year 2/Semester 1/BD/lab1/: create_tables.sql  create_tables_new.sql
Year 2/Semester 1/BD/lab2/: queries.sql
Year 2/Semester 1/BD/lab3/: procedures.sql
Year 2/Semester 1/BD/lab4/: delete_rows.sql  insert_rows.sql  main.sql  select_view.sql  test.sql
Year 2/Semester 1/BD/lab5/: functions.sql  main.sql  procedures.sql
Year 2/Semester 1/Computer Networks/: retele proiect.pkt
Year 2/Semester 1/Computer Networks/labs/: RETELE PROIECT PROIECT.pkt
Year 2/Semester 1/Computer Networks/tema1b/: c.out  client.c  server.c  server_concurent.c
Year 2/Semester 1/Computer Networks/tema1b_2/: server.c
Year 2/Semester 1/Computer Networks/tema1b_3/: s.out  server.c
Year 2/Semester 1/Computer Networks/tema1b_4/: s.out  server.c
Year 2/Semester 1/Computer Networks/tema1b_5/: Client.java  s.out  server_concurent.out
Year 2/Semester 1/Computer Networks/tema1c/: clientUDP.c
Year 2/Semester 1/Computer Networks/tema1c_1/: serverUDP.c
Year 2/Semester 1/Computer Networks/tema1c_4/: c.out
Year 2/Semester 1/Computer Networks/tema1c_9/: clientUDP.c
Year 2/Semester 1/PLF/L1/: 5.lsp  geeks.lisp
Year 2/Semester 1/PLF/L2/: .7.lisp.swp  7.lisp
Year 2/Semester 1/PLF/L3/: .9.lisp.swp  9.lisp
Year 2/Semester 1/PLF/P1/: 1.pl  10.pl  11.pl  12.pl  13.pl  14.pl  15.pl  2.pl  3.pl  4.pl  5.pl  6.pl  7.pl  8.pl  9.pl  ex.pl
Year 2/Semester 1/PLF/P2/: 11.pl  13.pl  14.pl  15.pl  15bis.pl  2.pl  4.pl  5.pl  7.pl  9.pl  bej.pl  t.pl
Year 2/Semester 1/PLF/P3/: .9.pl.swp  12.pl  12_bis.pl  bkt.pl
Year 2/Semester 1/ProbabilityStatistics/Subiecte practic/: recapitulare.m  sim.m  test.m  test2.m
Year 2/Semester 2/SGBD/lab1/: lab1.sln
(+1168 files in other folders)
